Only add REQUEST_INSTALL_PACKAGES permission for nightly (#5584)

--- a/nightly/AndroidManifest.xml
+++ b/nightly/AndroidManifest.xml
@@ -4,5 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES"/>
 
 </manifest>
