Set build tools to 36.0.0 (#5619)
* manual

Signed-off-by: Pun Butrach <pun.butrach@gmail.com>

* manual

Signed-off-by: Pun Butrach <pun.butrach@gmail.com>

* manual

* Remove extras

---------

Signed-off-by: Pun Butrach <pun.butrach@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ plugins {
 allprojects {
     plugins.withType(AndroidBasePlugin).configureEach {
         android {
+            buildToolsVersion "36.0.0"
             compileSdk 36
             defaultConfig {
                 minSdk 26
