chore: Fix labels for feature request issue template

--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -1,7 +1,7 @@
 name: Feature request
 description: Suggest features you want the developers (or contributors) to make for the launcher.
 title: "[FEATURE] "
-labels: [feature, enhancement]
+labels: [feature-request]
 type: Feature
 body:
   - type: markdown
