--- a/settings.gradle
+++ b/settings.gradle
@@ -40,6 +40,7 @@ dependencyResolutionManagement {
         }
         mavenCentral()
         maven { url 'https://jitpack.io' }
+        maven { url "https://maven.singular.net/" }
     }
 }
 
