--- a/build.gradle
+++ b/build.gradle
@@ -487,11 +487,23 @@ licensee {
     allow(SpdxId.Apache_20)
     allow(SpdxId.BSD_3_Clause)
     allow(SpdxId.GPL_20_or_later)
+    allow(SpdxId.MIT) // ✅ already needed for checker-qual
+
+    // ✅ Allow Google terms
+    allowUrl("https://developer.android.com/studio/terms.html")
+
+    // ✅ Allow MIT license URL variant (for colorkt)
+    allowUrl("https://opensource.org/licenses/mit-license.php")
+
+    // Existing
     allowDependency("com.github.topjohnwu.libsu", "core", "6.0.0")
     allowDependency("com.github.topjohnwu.libsu", "service", "6.0.0")
     allowUrl("https://github.com/patrykmichalik/opto/blob/master/LICENSE")
     allowUrl("https://github.com/RikkaApps/HiddenApiRefinePlugin/blob/main/LICENSE")
-    allowUrl("https://opensource.org/licenses/mit-license.php")
+
+    // Singular SDK → no license, allow explicitly
+    allowDependency("com.singular.sdk", "singular_sdk", "12.10.0")
 
     bundleAndroidAsset = true
 }
+
